<resources>
    <string name="app_name">Home Coffee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">MQTT</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txt_DevicesFragTitle">Devices</string>
    <string name="btn_OnDevices">On</string>
    <string name="txt_DevicesConnected">" Device(s) Connected"</string>
    <string name="txt_DevicesDisconnected">All Devices Are Disconnected</string>
    <string name="txt_connectionStateConnected">Connected</string>
    <string name="txt_connectionStateDisconected">Disconnected</string>
    <string name="btn_OffDevices">Off</string>
    <string name="menu_devices" translatable="false">Devices</string>
    <string name="btn_enable_dev">Enabled</string>
    <string name="btn_disabled_dev">Disabled</string>
    <string name="btn_addDevice">ADD</string>
    <string name="spinner_contDescription">Device Type</string>
    <string name="txt_devChannelAdd">Device Channel</string>
    <string name="toolbar_addDevTitle">Add Device</string>
    <string name="toolbar_devicesTitle">My Devices</string>
    <string name="toolbar_galleryTitle">Gallery</string>
    <string name="toolbar_slideshowTitle" translatable="false">Slide Show</string>
    <string name="toolbar_addRomTitle">Add Room</string>
    <string name="txt_devNameAdd">Device Name</string>
    <string name="btn_devAddNext">NEXT</string>
    <string name="txt_AddDevSelectRoomTitle">Select Room</string>
    <string name="toastMessage_MissingDevName">You must to introduce a Device Name</string>
    <string name="toastMessage_MissingDevChannel">You must to introduce the Device Channel</string>
    <string name="toastMessage_MissingDevRoom">You must to Select a Room</string>
    <string name="toolbar_devDetails">Device Details</string>
    <string name="btn_setAxis_week">Week</string>
    <string name="btn_setAxis_day">Day</string>
    <string name="btn_setAxis_hour">Hour</string>
    <string name="textView_DevNameLabel">Name</string>
    <string name="textView_DevChannelLabel">Channel</string>
    <string name="textView_DevTypeLabel">Device Type</string>
    <string name="textView_DevRoomLabel">Device Room</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="toolbar_editDevTitle">Edit Device</string>
    <string name="txt_AlertDialog_deleteDev">Are you sure you want to delete this device?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_AlertDialog_deleteTitle">Delete</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Create an account</string>
    <string name="logout">Log out of account</string>
    <string name="txt_NotificationsTitle">Notifications</string>
    <string name="txt_NoNotifications">There are not new Notifications</string>
    <string name="deviceTypeName_Humidity">Humidity</string>
    <string name="deviceTypeName_Light">Light</string>
    <string name="deviceTypeName_Temperature">Temperature</string>
    <string name="deviceTypeName_Acceleration">Acceleration</string>
    <string name="deviceTypeName_Pressure">Pressure</string>
    <string name="txt_DeviceMode">Device Mode</string>
    <string name="devModeSpinner_Sensor">Sensor</string>
    <string name="devModeSpinner_Actuator">Actuator</string>
    <string name="txt_SensorValueLabel">Sensor\'s Value</string>
    <string name="btn_associateSensor">Associate Sensor</string>
    <string name="txt_NoAssociatedSensor">No Associated Sensor</string>
    <string name="btn_changeAssociateSensor">Change Associate Sensor</string>
    <string name="txt_valueControler_DesiredValue">Desired Value</string>
    <string name="txt_valueControler_MeasuredValue">Measured Value</string>
    <string name="txt_AlertDialog_AssociateSensorTitle">Associate Sensor</string>
    <string name="txt_AlertDialog_associateSensor">Are you sure you want to associate this Sensor to the Device?</string>
    <string name="toastMessage_AddDeviceFail">The Device couldn\'t be added</string>
    <string name="toastMessage_AddDeviceSuccess">The Device was Added Sucessfully</string>
    <string name="toastMessage_AssociateSensorSuccess">The Sensor was Associated Successfully</string>
    <string name="toastMessage_AssociateSensorFail">The Sensor couldn\'t be Associated</string>
    <string name="toolbar_selectSensorTitle">Select a Sensor</string>
    <string name="txt_NoBLEDevName">N/A</string>
    <string name="txt_loadingDialog_ScanningDevices">Scanning Devices...</string>
    <string name="txt_loadingDialog_ConnectingToDevice">Connecting...</string>
    <string name="toastMessage_BLEDeviceDisconnected">BLE Device Disconnected</string>
    <string name="toastMessage_BLEDeviceConnected">BLE Device Connected</string>
    <string name="txt_loadingDialog_ConnectionWithDeviceSucceed">Connection Succeeded with:</string>
    <string name="txt_loadingDialog_ServicesDiscovered">Services Discovered</string>
    <string name="txt_loadingDialog_Characteristic_Part1">\"</string>
    <string name="txt_loadingDialog_CharacteristicRead_Part2">\" Characteristic Read Successfully</string>
    <string name="txt_loadingDialog_CharacteristicWroten_Part2">\" Characteristic Wroten Sucessfully</string>
    <string name="txt_loadingDialog_ConfigurationServiceFound">Configuration Service Found</string>
    <string name="toastMessage_BLEDeviceConfigurationSucceeded">BLE Device Configuration Succeeded</string>
    <string name="toastMessage_BLEDeviceConfigurationError">BLE Device Configuration Error</string>
    <string name="toastMessage_CharacteristicReadOperationFailed">Timeout: Read operation failed</string>
    <string name="toastMessage_CharacteristicWriteOperationFailed">Timeout: Write Operation Failed</string>
    <string name="toastMessage_BLEDeviceConnectionFailed">Timeout: Device Connection Failed</string>
    <string name="toastMessage_BLEDiscoverServicesFailed">Timeout: Discover Services Operation Failed</string>
    <string name="BLEDevicesFound_title">Devices Found</string>
    <string name="btn_scanBLEDevices">Scan</string>
    <string name="txt_AlertDialog_TTNEndDeviceRegistrationTitle">Network Credentials</string>
    <string name="txt_AlertDialog_TTNEndDeviceRegistration">Introduce the Network Credentials for Connect the Gateway to the Network.</string>
    <string name="btn_Continue">Continue</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="txt_DeviceEUICode">Device EUI Code:</string>
    <string name="btn_setGateaway">Set Gateaway</string>
    <string name="txt_GatewayNotDefined">Gateway Not Defined</string>
    <string name="txt_AlertDialog_DisassociateGatewayTitle">Disassociate Gateway</string>
    <string name="txt_AlertDialog_DisassociateGateway">Are you sure that you want to disassociate Gateway?</string>
    <string name="txt_AlertDialog_GWConfig_AppEUILabel">Network Name:</string>
    <string name="txt_AlertDialog_GWConfig_AppKeyLabel">Network Passwork:</string>
    <string name="toastMessage_RemainingFields">Remaining Fields. Try Again</string>
    <string name="general_messages" translatable="false">message</string>
    <string name="general_please_write_some_message" translatable="false">please write message</string>
    <string name="mqtt_share">mqtt_share</string>
    <string name="txt_On" translatable="false">On</string>
    <string name="txt_Off" translatable="false">Off</string>
    <string name="deviceTypeName_Digital" translatable="false">Digital</string>
    <string name="deviceTypeName_Presence">Presence</string>
    <string name="deviceTypeName_Analog">Analog</string>
    <string name="txt_MesuredValue">Measured Vale</string>
    <string name="NotificationDescription_NewValue">New value received:</string>
    <string name="toastMessage_DevicesAddedSuccessfully">Devices Added Successfully</string>
    <string name="txt_AlertDialog_AddDevicesTitle">Add Devices</string>
    <string name="txt_AlertDialog_AddDevices_Part1">There were found</string>
    <string name="txt_AlertDialog_AddDevices_Part2">" Do you want to Add them?"</string>
    <string name="txt_AlertDialog_AddDeviceTitle">Add Device</string>
    <string name="txt_AlertDialog_AddDevice">Do you want to Add a Device in Automatic or Manual mode?</string>
    <string name="txt_Automatic">Automatic</string>
    <string name="txt_Manual" translatable="false">Manual</string>
    <string name="RoomEliminated">Room eliminated</string>
    <string name="ELiminateMode">Room eliminate mode deactivated</string>
    <string name="SelectRoomEliminate">Select the room to remove \nClick twice to cancel</string>
    <string name="txt_loadingDialog_GettingRooms">Getting Rooms...</string>
    <string name="txt_NotAssociateSensor">Not Associate Sensor</string>
    <string name="txt_addRoomName">Insert a name</string>
    <string name="txt_NameProtection">Insert a different name</string>
    <string name="toastMessage_NoRooms">No rooms added</string>
    <string name="toastMessage_ChannelNotAvailable">Channel Not Available</string>
    <string name="toastMessage_UnreachableServer">Unreachable Server. Please Use Annoter Network</string>
    <string name="toolbar_GWConfigTitle">Gateway Configuration</string>
    <string name="toolbar_RoomTitle">My Room</string>
    <string name="toastMessage_NoRoomsDevices">Please insert a room before adding devices</string>
    <string name="txt_Send">Send</string>
    <string name="txt_msg">Message</string>
    <string name="txt_AddRoom">Add Room</string>
    <string name="txt_InsertName">Insert Name</string>
    <string name="txt_Name">Name</string>
    <string name="txt_SelectRoomType">Select Room Type</string>
    <string name="roomType_Bedroom">Bedroom</string>
    <string name="roomType_Kitchen">Kitchen</string>
    <string name="roomType_LivingRoom">Living Room</string>
    <string name="roomType_Office">Office</string>
    <string name="roomType_Bathroom">Bathroom</string>
    <string name="txt_Welcome">Welcome to your House</string>
    <string name="txt_YourRooms">Your Rooms</string>
</resources>