<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Devices.AddDeviceFragment">

    <TextView
        android:id="@+id/textViewDevNameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_devNameAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDevNameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDevNameAdd" />

    <TextView
        android:id="@+id/textViewDevChannelAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_devChannelAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextDevNameAdd"
        app:layout_constraintTop_toBottomOf="@+id/editTextDevNameAdd" />

    <EditText
        android:id="@+id/editTextDevChannelAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDevChannelAdd" />

    <Spinner
        android:id="@+id/deviceType_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/spinner_contDescription"
        android:drawSelectorOnTop="true"
        android:minHeight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDevChannelAdd" />

    <Button
        android:id="@+id/button_devNextAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_devAddNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceType_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>