<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Devices.DevicesFragment">

    <TextView
        android:id="@+id/textView_DevicesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_DevicesFragTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Title" />

    <TextView
        android:id="@+id/textViewDevicesConState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_DevicesConnected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_DevicesTitle" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:minHeight="48dp"
        android:scrollbarSize="4sp"
        android:text="@string/btn_OnDevices"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDevicesConState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDevices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/recyclerview_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDevicesConState" />
    <!---->
</androidx.constraintlayout.widget.ConstraintLayout>
